# Skirnir

./: .gitignore  404.html  AGENTS.md  CMakeLists.txt  README.md  conandata.yml  conanfile.py  index.html  mkdocs.yml  sitemap.xml
.github/workflows/: cmake-multi-platform.yml  docs.yml
api-reference/: index.html
benchmark/: Benchmark.cpp  CMakeLists.txt  README.md  measure_compile_time.py  measure_compile_time.sh
docs/: api-reference.md  getting-started.md  index.md  lifetimes.md
docs/usage/: application.md  async.md  concrete-type.md  configuration.md  extension.md  injection.md  interface-contract.md  keyed-services.md  logging.md  multi-registration.md  optional-deps.md
examples/: CMakeLists.txt  main.cpp
examples/async/: CMakeLists.txt
examples/async/asio_echo/: main.cpp
examples/async/scope/: main.cpp
examples/async/timer/: main.cpp
examples/multi_impl/: main.cpp
examples/options_binding/: main.cpp
examples/simple_injection/: main.cpp
getting-started/: index.html
include/: Common.hpp  Reflection.hpp  ServiceCollection.hpp  ServiceProvider.hpp
include/Skirnir/: Application.hpp  ApplicationBuilder.hpp  Async.hpp  Common.hpp  Configuration.hpp  DependencyInjection.hpp  Extension.hpp  LogLevel.hpp  LogRecord.hpp  LogScope.hpp  Logger.hpp  Logging.hpp  LoggingExtension.hpp  Reflection.hpp  ServiceCollection.hpp  ServiceId.hpp  ServiceProvider.hpp  ServiceScope.hpp  Skirnir.hpp
include/Skirnir/Async/: AsioAdapter.hpp  AsyncApplication.hpp  AsyncApplicationHost.hpp  Cancellation.hpp  Scheduler.hpp  Task.hpp  WhenAll.hpp
include/Skirnir/Common/: Arc.hpp  ConstructorArgumentTraits.hpp  Keyed.hpp  LifeTime.hpp  Namespace.hpp  Ref.hpp  Reflection.hpp
include/Skirnir/Configuration/: Aliases.hpp  ConfigurationBuilder.hpp  ConfigurationOptions.hpp  EnvironmentVariablesSource.hpp  IConfigurationSource.hpp  InMemorySource.hpp  JsonFileSource.hpp  JsonObjectReader.hpp  JsonStringSource.hpp
include/Skirnir/DependencyInjection/: Application.hpp  ApplicationBuilder.hpp  Extension.hpp  Resolve.hpp  ServiceCollection.hpp  ServiceDescriptor.hpp  ServiceId.hpp  ServiceProvider.hpp  ServiceScope.hpp
include/Skirnir/LogSinks/: AsyncSink.hpp  ConsoleSink.hpp  FileSink.hpp  JsonSink.hpp  NullSink.hpp
include/Skirnir/Logging/: LogLevel.hpp  LogRecord.hpp  LogScope.hpp  LogSinks.hpp  Logger.hpp  LoggingExtension.hpp
include/Skirnir/Logging/LogSinks/: AsyncSink.hpp  ConsoleSink.hpp  FileSink.hpp  ILogSink.hpp  JsonSink.hpp  NullSink.hpp
lifetimes/: index.html
search/: search_index.json
src/: Application.cpp  ApplicationBuilder.cpp  Common.hpp  Configuration.cpp  Core.cpp  Extension.cpp  LogScope.cpp  LogSinks.cpp  Logger.cpp  Reflection.cpp  ServiceCollection.cpp  ServiceCollection.hpp  ServiceId.hpp  ServiceProvider.cpp  ServiceProvider.hpp  ServiceScope.cpp  ServiceScope.hpp  Skirnir.cpp  main.cpp
src/Configuration/: ConfigurationBuilder.cpp  ConfigurationOptions.cpp  Detail.hpp  EnvironmentVariablesSource.cpp  InMemorySource.cpp  JsonFileSource.cpp  JsonStringSource.cpp
src/DependencyInjection/: ServiceProvider.cpp  ServiceScope.cpp
src/LogSinks/: AsyncSink.cpp  ConsoleSink.cpp  Detail.cpp  Detail.hpp  FileSink.cpp  JsonSink.cpp
src/Logging/: LogScope.cpp  Logger.cpp
src/Logging/LogSinks/: AsyncSink.cpp  ConsoleSink.cpp  Detail.cpp  Detail.hpp  FileSink.cpp  JsonSink.cpp
src/flat_map/: __binary_flat_tree.hpp  __type_traits.hpp  flat_map.hpp
test/: CMakeLists.txt  conandata.yml  conanfile.py
test/bench/: CMakeLists.txt  LoggingBench.cpp
test/src/: ArcSpec.cpp  AsioAdapterSpec.cpp  AsyncApplicationSpec.cpp  AsyncServiceSpec.cpp  BindSpec.cpp  CancellationSpec.cpp  ConfigurationCoercionSpec.cpp  ConfigurationSpec.cpp  KeyedServiceSpec.cpp  LoggerSpec.cpp  LoggingSpec.cpp  MultiRegistrationSpec.cpp  OptionalDependencySpec.cpp  ReflectionSpec.cpp  ServiceCollectionSpec.cpp  ServiceProviderSpec.cpp  ServiceScopeSpec.cpp  TaskSpec.cpp
usage/application/: index.html
usage/concrete-type/: index.html
usage/configuration/: index.html
usage/extension/: index.html
usage/injection/: index.html
usage/interface-contract/: index.html
usage/keyed-services/: index.html
usage/logging/: index.html
usage/multi-registration/: index.html
usage/optional-deps/: index.html
